--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ dj-database-url==2.3.0
 Django==5.1.5
 django-debug-toolbar==5.0.1
 pillow==11.1.0
-psycopg-binary==3.2.4
-psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-decouple==3.8
+setuptools==80.9.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
+wheel==0.45.1
